Remove deprecated api usages